--- a/app/Resources/views/admin/layout/sidebar.html.twig
+++ b/app/Resources/views/admin/layout/sidebar.html.twig
@@ -57,23 +57,6 @@
                     </ul>
                 </li>
 
-                <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="menu-icon fa fa-file"></i>
-                        Product
-                    </a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li>
-                            <i class="fa fa-list-alt"></i>
-                            <a href="{{ path('admin_productcat_index') }}">Product Cat</a>
-                        </li>
-                        <li>
-                            <i class="fa fa-list-alt"></i>
-                            <a href="{{ path('admin_product_index') }}">Product</a>
-                        </li>
-                    </ul>
-                </li>
-
                 <li>
                     <a href="{{ path('admin_comment_index') }}">
                         <i class="menu-icon fa fa-comments"></i>
@@ -86,6 +69,31 @@
                         <i class="menu-icon fa fa-envelope-o"></i>
                         {{ 'menu.contact'|trans }}
                     </a>
+                </li>
+
+                <li class="menu-item-has-children dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="menu-icon fa fa-file"></i>
+                        Sản phẩm
+                    </a>
+                    <ul class="sub-menu children dropdown-menu">
+                        <li>
+                            <i class="fa fa-list-alt"></i>
+                            <a href="{{ path('admin_product_index') }}">Danh sách sản phẩm</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-edit"></i>
+                            <a href="{{ path('admin_product_new') }}">Thêm mới sản phẩm</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-list-alt"></i>
+                            <a href="{{ path('admin_productcat_index') }}">Danh mục</a>
+                        </li>
+                        <li>
+                            <i class="fa fa-list-alt"></i>
+                            <a href="{{ path('admin_productcat_index') }}">Từ khóa</a>
+                        </li>
+                    </ul>
                 </li>
 
                 <li class="menu-item-has-children dropdown">
