--- a/app/Resources/views/admin/productcat/new.html.twig
+++ b/app/Resources/views/admin/productcat/new.html.twig
@@ -20,8 +20,9 @@
                                         {{ form_row(form.parentcat) }}
                                         {{ form_row(form.name) }}
                                         {{ form_row(form.url) }}
-                                        {{ form_row(form.description) }}
                                         {{ form_row(form.enable) }}
+                                        {{ form_row(form.imageFile) }}
+                                        {{ form_row(form.description) }}
 
                                         <div class="card-title">
                                             <h3>{{ 'label.seo'|trans }}</h3>
