--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -109,7 +109,7 @@
 
         <section class="home-new-product-tab">
             <div class="container">
-                <div class="row project-hot">
+                <div class="project-hot">
                     <div class="widget-title">
                         <h3 class="box-title">
                             <span class="title">
@@ -119,44 +119,48 @@
                             </span>
                         </h3>
                     </div>
-
                     <div class="clearfix"></div>
-
                     <div class="products-items">
                         <div class="bxslider">
+                            {% for row in productsNew %}
                             <div class="products-item">
                                 <div class="products-item-wrapper">
                                     <div class="media-thumb">
                                         <picture>
                                             <img
                                                 src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                                data-src="//cdn.shopify.com/s/files/1/0270/5873/3109/products/11-compressor_076662b4-fa80-4ebb-97f6-f26db5adec01_300x.png?v=1574410402"
+                                                data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_220_220') }}"
                                                 class="mr-3 img-thumbnail lazyload"
-                                                alt="" />
+                                                alt="{{ row.getName() }}" />
                                         </picture>
                                     </div>
                                     <div class="media-body">
                                         <h5 class="mt-0 mb-1">
-                                            <a title="" href="#" title="">
-                                                <span>Ainterdu pretium de miancelos dincidunts</span>
+                                            <a href="{{ path('product_show', {'slug': row.getUrl() }) }}" title="{{ row.getName() }}">
+                                                <span>{{ row.getName() }}</span>
                                             </a>
                                         </h5>
-                                        <div class="rating">
-                                            <div class="star-full "></div>
-                                            <div class="star-full "></div>
-                                            <div class="star-full "></div>
-                                            <div class="star-full "></div>
-                                            <div class="star "></div>
-                                        </div>
+                                        {{ 4|rating }}
                                         <div class="price-box">
-                                            <div class="price-sale">
-                                                <span class="old-price"><span class="money">320.000</span></span>
-                                                <span class="special-price"><span class="money">300.000</span></span>
-                                            </div>
+                                            {% if row.getRegularPrice() is empty and row.getSalePrice() is empty %}
+                                                <div class="price-regular">
+                                                    <span><span class="money">Liên hệ</span></span>
+                                                </div>
+                                            {% elseif row.getRegularPrice() > 0 and row.getSalePrice() > 0 %}
+                                                <div class="price-sale">
+                                                    <span class="old-price"><span class="money">{{ row.getRegularPrice()|number_format(0, ',', '.') }}</span></span>
+                                                    <span class="special-price"><span class="money">{{ row.getSalePrice()|number_format(0, ',', '.') }}</span></span>
+                                                </div>
+                                            {% elseif row.getRegularPrice() > 0 and row.getSalePrice() is empty %}
+                                                <div class="price-regular">
+                                                    <span><span class="money">{{ row.getRegularPrice()|number_format(0, ',', '.') }}</span></span>
+                                                </div>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
                             <div class="products-item">
                                 <div class="products-item-wrapper">
                                     <div class="media-thumb">
@@ -261,7 +265,7 @@
 
         <section class="home-new-product-tab">
             <div class="container">
-                <div class="row project-hot">
+                <div class="project-hot">
                     <div class="widget-title">
                         <h3 class="box-title">
                             <span class="title">
@@ -413,19 +417,17 @@
 
         <section class="home-spotlight-block">
             <div class="container">
-                <div class="row">
+                <div>
                     <div class="widget-title">
                         <h3 class="box-title">
                             <span class="title">
                                 <span class="lang1">
-                                    Làm đẹp
+                                    Chăm sóc da
                                 </span>
                             </span>
                         </h3>
                     </div>
-
                     <div class="clearfix"></div>
-
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="spotlight-item">
@@ -528,5 +530,119 @@
             </div>
         </section>
 
+        <section class="home-spotlight-block">
+            <div class="container">
+                <div>
+                    <div class="widget-title">
+                        <h3 class="box-title">
+                            <span class="title">
+                                <span class="lang1">
+                                    Chăm sóc tóc
+                                </span>
+                            </span>
+                        </h3>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="spotlight-item">
+                                <div class="img-box">
+                                    <a href="" class="animate-scale">
+                                        <img data-src="https://cdn.shopify.com/s/files/1/0270/5873/3109/files/home-bottom-banner-new-1-compressor_800x800_crop_center.jpg?v=1574405565" alt="cospora-theme" itemprop="logo" class="lazyautosizes lazyloaded" data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]" data-sizes="auto" data-image="" sizes="380px" src="https://cdn.shopify.com/s/files/1/0270/5873/3109/files/home-bottom-banner-new-1-compressor_800x800_crop_center.jpg?v=1574405565">
+                                    </a>
+                                </div>
+                                <div class="content spotlight-inner">
+                                    <div class="content-title">
+                                        <h4 class="title">
+                                            <span>Tư vấn
+                                            </span>
+                                        </h4>
+                                        <h3 class="title">
+                                            <span>
+                                                Kem dưỡng trắng da Saffron Lever Ayush Ấn Độ
+                                            </span>
+                                        </h3>
+                                    </div>
+                                    <p class="des">
+                                        <span>
+                                            Kem dưỡng da Saffron Ấn Độ Lever Ayush là sự hòa quyện tinh túy giữa Saffron và Kumkumadi Tailam dựa theo phương pháp Ayurveda...
+                                        </span>
+                                    </p>
+                                    <a href="" class="spotlight-button btn">
+                                        <span>
+                                            Xem ngay
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="spotlight-item">
+                                <div class="img-box">
+                                    <a href="" class="animate-scale">
+                                        <img data-src="https://cdn.shopify.com/s/files/1/0270/5873/3109/files/home-bottom-banner-new-1-compressor_800x800_crop_center.jpg?v=1574405565" alt="cospora-theme" itemprop="logo" class="lazyautosizes lazyloaded" data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]" data-sizes="auto" data-image="" sizes="380px" src="https://cdn.shopify.com/s/files/1/0270/5873/3109/files/home-bottom-banner-new-1-compressor_800x800_crop_center.jpg?v=1574405565">
+                                    </a>
+                                </div>
+                                <div class="content spotlight-inner">
+                                    <div class="content-title">
+                                        <h4 class="title">
+                                            <span>Tư vấn
+                                            </span>
+                                        </h4>
+                                        <h3 class="title">
+                                            <span>
+                                                Kem dưỡng trắng da Saffron Lever Ayush Ấn Độ
+                                            </span>
+                                        </h3>
+                                    </div>
+                                    <p class="des">
+                                        <span>
+                                            Kem dưỡng da Saffron Ấn Độ Lever Ayush là sự hòa quyện tinh túy giữa Saffron và Kumkumadi Tailam dựa theo phương pháp Ayurveda...
+                                        </span>
+                                    </p>
+                                    <a href="" class="spotlight-button btn">
+                                        <span>
+                                            Xem ngay
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="spotlight-item">
+                                <div class="img-box">
+                                    <a href="" class="animate-scale">
+                                        <img data-src="https://cdn.shopify.com/s/files/1/0270/5873/3109/files/home-bottom-banner-new-1-compressor_800x800_crop_center.jpg?v=1574405565" alt="cospora-theme" itemprop="logo" class="lazyautosizes lazyloaded" data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]" data-sizes="auto" data-image="" sizes="380px" src="https://cdn.shopify.com/s/files/1/0270/5873/3109/files/home-bottom-banner-new-1-compressor_800x800_crop_center.jpg?v=1574405565">
+                                    </a>
+                                </div>
+                                <div class="content spotlight-inner">
+                                    <div class="content-title">
+                                        <h4 class="title">
+                                            <span>Tư vấn làm đẹp
+                                            </span>
+                                        </h4>
+                                        <h3 class="title">
+                                            <span>
+                                                Kem dưỡng trắng da Saffron Lever Ayush Ấn Độ
+                                            </span>
+                                        </h3>
+                                    </div>
+                                    <p class="des">
+                                        <span>
+                                            Kem dưỡng da Saffron Ấn Độ Lever Ayush là sự hòa quyện tinh túy giữa Saffron và Kumkumadi Tailam dựa theo phương pháp Ayurveda...
+                                        </span>
+                                    </p>
+                                    <a href="" class="spotlight-button btn">
+                                        <span>
+                                            Xem ngay
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 {% endblock %}
