--- a/web/assets/scss/front/app.scss
+++ b/web/assets/scss/front/app.scss
@@ -31,3 +31,4 @@ $web-font-path: 'data:text/css;base64,';
 @import "pages/homepage";
 @import "pages/news";
 @import "pages/contact";
+@import "pages/product";
