--- a/web/assets/scss/front/global/_base_elements.scss
+++ b/web/assets/scss/front/global/_base_elements.scss
@@ -109,6 +109,11 @@ i {
 .row {
     margin-left: -10px;
     margin-right: -10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .col-xs-1,
