--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -2,168 +2,61 @@
 <footer>
     <div class="container">
         <div class="row footer-top">
-            <div class="col-12 col-md-12 col-lg-4">
-                <h3 class="text-uppercase">Dịch vụ của chúng tôi</h3>
-                <ul class="about-us">
-                    <li>
-                        <a href="{{ path('news_show', {'slug': 'gioi-thieu' }) }}">Về chúng tôi</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" title="Bảng giá xây nhà trọn gói">Bảng giá xây nhà trọn gói</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" title="Bảng giá sửa nhà trọn gói">Bảng giá sửa nhà trọn gói</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" title="Bảng giá xây dựng nhà phần thô">Bảng giá xây dựng nhà phần thô</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('news_show', {'slug': 'bao-gia-nhan-cong' }) }}" title="Bảng giá nhân công">Bảng giá nhân công</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('news_show', {'slug': 'bao-gia-thiet-ke-nha-pho' }) }}" title="Bảng giá thiết kế nhà phố">Bảng giá thiết kế nhà phố</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('contact') }}">Liên hệ</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-12 col-md-12 col-lg-4">
-                <h3 class="text-uppercase">Từ khóa</h3>
-                {{ get_setting('topKeyword')|raw }}
-            </div>
-            <div class="col-12 col-md-12 col-lg-4">
-                <h3 class="text-uppercase">Xây Dựng Minh Duy</h3>
-                <ul class="footer-company">
-                    <li>
-                        <i class="fa fa-map-marker"></i>
-                        <span>10E3 Đường 30, P. Tân Phong, Quận 7, TP.HCM</span>
-                    </li>
-                    <li>
-                        <i class="fa fa-phone"></i>
-                        <span>0982.969.379</span>
-                    </li>
-                    <li>
-                        <i class="fa fa-envelope-o"></i>
-                        <span>xaydungminhduy@gmail.com</span>
-                    </li>
-                    <li>
-                        <i class="fa fa-internet-explorer"></i>
-                        <span>www.xaydungminhduy.com</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row footer-middle">
-            <div class="col-12 col-md-12 col-lg-3 hidden-xs hidden-sm">
-                <a href="{{ path('homepage') }}" title="{{ get_setting('siteName') }}">
-                    <img alt="{{ get_setting('siteName') }}" src="{{ asset('assets/images/logo-footer.png') }}">
-                </a>
-            </div>
-            <div class="col-12 col-md-12 col-lg-6">
-                <h3 class="text-uppercase">Về chúng tôi</h3>
-                <div class="footer-text-wrap">
-                    <p>Xây Dựng Minh Duy với kinh nghiệm thi công nhiều công trình lớn nhỏ tại TP Hồ Chí Minh và các tỉnh thành lân cận: Củ Chi, Long An, Bình Dương, Đồng Nai, ... Chúng tôi tự tin mang đến sự hài lòng đến toàn thể quý khách hàng khi tin tưởng đến tất cả các dịch vụ xây dựng của chúng tôi.</p>
-                    <p>Uy tín, chất lượng và chuyên nghiệp là những gì chúng tôi sẽ và luôn mang đến cho khách hàng!</p>
+            <div class="col-12 col-md-12 col-lg-3">
+                <h3 class="text-uppercase">Thông tin</h3>
+                <div>
+                    <p>685 Market Street</p>
+                    <p>San Francisco, CA 94105,</p>
+                    <p>United States</p>
+
+                    <p>Call us at: 1-888-699-8900</p>
+                    <p>Email: support@halothemes.com</p>
                 </div>
             </div>
             <div class="col-12 col-md-12 col-lg-3">
-                <h3 class="text-uppercase">Mạng xã hội</h3>
-                <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToFacebook') }}" title="Sửa Nhà Minh Duy trên Facebook">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                </span>
-                <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToGooglePlus') }}" title="Sửa Nhà Minh Duy trên Google plus">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                </span>
-                <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToTwitter') }}" title="Sửa Nhà Minh Duy trên Twitter">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                </span>
-                <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToYoutube') }}" title="Sửa Nhà Minh Duy trên Youtube">
-                        <i class="fa fa-youtube"></i>
-                    </a>
-                </span>
-                <span class="td-social-icon-wrap">
-                    <a target="_blank" href="{{ get_setting('linkToLinkedin') }}" title="Sửa Nhà Minh Duy trên Linkedin">
-                        <i class="fa fa-linkedin"></i>
-                    </a>
-                </span>
-                <div class="event-footer row">
-                    <div class="col-12 col-sm-12 col-md-12">
-                        <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="description">
-                            <h6>
-                                <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" itemprop="url">
-                                    <span>➊ Bảng giá sửa nhà trọn gói tại TP HCM</span>
-                                </a>
-                            </h6>
-                            <meta content="2021-01-01T4:00" itemprop="startDate">
-                            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
-                                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
-                                    <meta content="Ho Chi Minh" itemprop="addressLocality">
-                                    <meta content="VN" itemprop="addressRegion">
-                                    <meta content="70000" itemprop="postalCode">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="description">
-                            <h6>
-                                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" itemprop="url">
-                                    <span>➋ Bảng giá xây nhà trọn gói tại TP HCM</span>
-                                </a>
-                            </h6>
-                            <meta content="2021-02-02T5:00" itemprop="startDate">
-                            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
-                                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
-                                    <meta content="Ho Chi Minh" itemprop="addressLocality">
-                                    <meta content="VN" itemprop="addressRegion">
-                                    <meta content="70000" itemprop="postalCode">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="description">
-                            <h6>
-                                <a href="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
-                                    <span>➌ Dịch vụ xây nhà trọn gói tại TP HCM</span>
-                                </a>
-                            </h6>
-                            <meta content="2021-03-03T6:00" itemprop="startDate">
-                            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
-                                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
-                                    <meta content="Ho Chi Minh" itemprop="addressLocality">
-                                    <meta content="VN" itemprop="addressRegion">
-                                    <meta content="70000" itemprop="postalCode">
-                                </div>
-                            </div>
-                        </div>
+                <h3 class="text-uppercase">Danh mục</h3>
+                <ul class="about-us">
+                    <li>
+                        <a href="#">Chăm sóc da</a>
+                    </li>
+                    <li>
+                        <a href="#">Chăm sóc tóc</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-12 col-lg-3">
+                <h3 class="text-uppercase">Hỗ trợ</h3>
+                <ul class="about-us">
+                    <li>
+                        <a href="#">Chính sách bảo hành</a>
+                    </li>
+                    <li>
+                        <a href="#">Tuyển dụng cộng tác viên</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-12 col-lg-3">
+                <h3 class="text-uppercase">Fanpage</h3>
+                <div>
+                    <div class="fb-page"
+                        data-href="https://www.facebook.com/xaydungkimanh/"
+                        data-tabs="timeline"
+                        data-width="555"
+                        data-height="277"
+                        data-small-header="true"
+                        data-adapt-container-width="true"
+                        data-hide-cover="true"
+                        data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/xaydungkimanh/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/xaydungkimanh/">Xây Nhà, Sửa Chữa Nhà Kim Anh</a></blockquote>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row copyright">
-            <div class="col-sm-12 text-center">
-                <p>Copyright © {{ "now"|date('Y') }} <a href="https://xaydungminhduy.com/" title="Xây Dựng Minh Duy">Xây Dựng Minh Duy</a>, all rights reserved.</p>
+        <div class="row footer-middle">
+            <div class="col-12 col-md-12 col-lg-12">
+                <p class="text-center">Copyright © {{ "now"|date('Y') }} <a href="https://xaydungminhduy.com/" title="Xây Dựng Minh Duy">Xây Dựng Minh Duy</a>, all rights reserved.</p>
             </div>
         </div>
     </div>
-
-    {{ include('layout/hotline.html.twig') }}
 </footer>
 <!-- End footer -->
