--- a/web/assets/scss/front/global/_menu.scss
+++ b/web/assets/scss/front/global/_menu.scss
@@ -1,6 +1,10 @@
 #nav {
-    background-color: $primaryColor2;
+    background-color: $white;
     z-index: 10000;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    -ms-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
     .nav-container {
         position: relative;
@@ -65,6 +69,7 @@
                 box-shadow: none;
                 padding: 0;
                 position: relative;
+                text-align: center;
     
                 @media only screen and (max-width: 767.98px) {
                     width: 100%;
@@ -72,6 +77,10 @@
                 }
     
                 .navbar-nav {
+                    display: inline-block;
+                    float: none;
+                    vertical-align: top;
+
                     @media only screen and (max-width: 767.98px) {
                         margin: 0;
                     }
@@ -114,7 +123,7 @@
                         font-size: 16px;
                         text-transform: uppercase;
                         font-family: $robotoCondesed;
-                        color: $white;
+                        color: $black;
                         text-shadow: 0.2px 0.2px 0.2px $white;
 
                         &:focus, &:hover {
