--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -99,49 +99,86 @@
 
 .homepage-cat-hot {
     margin-top: 30px;
-}
 
-.home-new-product-tab {
-    .widget-title {
-        margin-bottom: 10px;
-        text-align: center;
-        padding-top: 15px;
+    .item {
+        margin-bottom: 30px;
 
-        .box-title {
-            color: #141414;
-            font-size: 24px;
-            letter-spacing: .02em;
-            font-weight: 600;
-            text-transform: uppercase;
+        .banner-item {
             position: relative;
-            margin-bottom: 12px;
-            padding: 0 25px;
-            display: inline-block;
-            font-family: $arimo;
 
-            &::before,
-            &::after {
-                top: 50%;
-                width: 120px;
-                height: 2px;
+            .img-box {
+                text-align: center;
+            }
+
+            .content-box {
                 position: absolute;
-                background-color: #141414;
-                content: "";
-            }
+                top: 50%;
+                left: 50%;
+                -moz-transform: translate(-50%, -50%);
+                -o-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+                min-width: 90%;
+                text-align: center;
 
-            &::before {
-                left: -120px;
-                -webkit-transform: translateY(-50%);
-                transform: translateY(-50%);
-            }
-
-            &::after {
-                right: -120px;
-                -webkit-transform: translateY(-50%);
-                transform: translateY(-50%);
+                .banner-title {
+                    font-size: 20px;
+                    letter-spacing: .02em;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    margin: 0;
+                    display: inline-block;
+                    position: relative;
+                }
             }
         }
     }
+}
+
+.widget-title {
+    margin-bottom: 15px;
+    text-align: center;
+    padding-top: 15px;
+
+    .box-title {
+        color: #141414;
+        font-size: 24px;
+        letter-spacing: .02em;
+        font-weight: 600;
+        text-transform: uppercase;
+        position: relative;
+        margin-bottom: 12px;
+        padding: 0 25px;
+        display: inline-block;
+        font-family: $arimo;
+
+        &::before,
+        &::after {
+            top: 50%;
+            width: 120px;
+            height: 2px;
+            position: absolute;
+            background-color: #141414;
+            content: "";
+        }
+
+        &::before {
+            left: -120px;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+
+        &::after {
+            right: -120px;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+    }
+}
+
+.home-new-product-tab {
+    margin-bottom: 30px;
 
     .products-items {
         .bx-wrapper {
@@ -161,7 +198,8 @@
                     }
 
                     .products-item-wrapper {
-                        width: 195px !important;
+                        width: 234px !important;
+                        position: relative;
     
                         @media only screen and (max-width: 767.98px) {
                             width: 100% !important;
@@ -169,6 +207,12 @@
     
                         @media (min-width: 768px) and (max-width: 979.98px) {
                             width: 220px !important;
+                        }
+
+                        .media-thumb {
+                            img {
+                                border: none;
+                            }
                         }
 
                         .media-body {
@@ -203,6 +247,10 @@
     
                                 .star-full, .star  {
                                     font-size: 18px;
+
+                                    &::before {
+                                        padding-right: 0;;
+                                    }
                                 }
     
                                 .spr-badge-caption {
@@ -266,7 +314,11 @@
 }
 
 .home-spotlight-block {
+    margin-top: 30px;
+
     .spotlight-item {
+        margin-bottom: 20px;
+
         .img-box {
             text-align: center;
             position: relative;
@@ -303,6 +355,23 @@
                     -o-transition: all 0.7s ease;
                     transition: all 0.7s ease;
                 }
+
+                &:hover {
+                    &::before {
+                        overflow: visible;
+                        opacity: 0.3;
+                        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=30)";
+                        filter: alpha(opacity=30);
+                    }
+
+                    img {
+                        -moz-transform: scale3d(1.1, 1.1, 1);
+                        -o-transform: scale3d(1.1, 1.1, 1);
+                        -ms-transform: scale3d(1.1, 1.1, 1);
+                        -webkit-transform: scale3d(1.1, 1.1, 1);
+                        transform: scale3d(1.1, 1.1, 1);
+                    }
+                }
             }
         }
 
@@ -335,6 +404,7 @@
                 h3.title {
                     font-size: 20px;
                     line-height: 26px;
+                    margin-bottom: 0px;
                 }
             }
 
